# smart-ape

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs
src/individual/: mod.rs
tests/: test_algorithm_creation.rs  test_individual_creation.rs  test_individual_functions.rs
