[package]
name = "smart_ape"
version = "0.1.2"
edition = "2021"
description = "A genetic algorithms library."
license = "MIT"
repository = "https://github.com/belsabbagh/smart-ape.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
